TAG: qcreports_db-6-0-6-9
DATE: 11/14/2016
STAFF: sc
CHANGES: GXD HT Project TR12370
New reports:
1) mgd/GXD_HTSampleGenotypeNA.py
2) mgd/GXD_HTSampleIncompAgeAndTS.py
3) mgd/GXD_HTSampleNoAge.py
4) mgd/GXD_HTSampleNoStructure.py
5) mgd/GXD_HTSampleWrongAge.sql

TAG: qcreports_db-6-0-6-8
DATE: 11/09/2016
STAFF: sc
CHANGES: GXD HT Project TR12370
1)added experiments to GXD_Stats.py
2) new GXD_HTOverview.py
3) new GXD_HTExpCuration.py
4) new GXD_HTNoMasterBib.py

TAG: qcreports_db-6-0-6-7
TAG: qcreports_db-6-0-6-6
DATE: 11/08/2016
STAFF: lec
CHANGES: 
TR12449/mgd/GXD_Images.py/J Neurosci

TAG: qcreports_db-6-0-6-5
DATE: 10/28/2016
STAFF: sc
CHANGES: TR12370 GXD HT project
Added gxdhtload to qcr.shtml

TAG: qcreports_db-6-0-6-4
DATE: 10/26/2016
STAFF: sc
CHANGES:
TR11840 - Added mgd/GO_InvalidInferredFrom.py

TAG: qcreports_db-6-0-6-3
TAG: qcreports_db-6-0-8-1
DATE: 10/13/2016
STAFF: lec
CHANGES: 
TR12427/Disease Ontology (DO)
1) qcr.shtml

TAG: qcreports_db-6-0-6-2
TAG: qcreports_db-6-0-6-1
DATE: 09/08/2016, 09/13/2016
STAFF: lec
CHANGES: 
1) TR12222/expects only one delimiter, but *any* delimiter may be used in inferredFrom field
2) TR12349/TR12345/gone-to & more/GO_Noctua/GPAD
obsolete:
mgd/MRK_InterimByDate.sql
mgd/MRK_GORCA.py
weekly/GO_eco_multipleEvidence.py
new:
mgd/GO_GPI_verify.py
modify:
qcr.shtml
3) TR11083/Retire/Archive Nomenclature Table (NOM_Marker)
_Marker_Status_key in (1,3) changed to = 1 
_Marker_Status_key not in (1,3) changed to = 2 
_Marker_Status_key != 2 changed to = 1
'interim' comment removed

TAG: qcreports_db-6-5-0-3
DATE: 08/31/2016
STAFF: kstone
CHANGES: changed ftp url
qcr.html changed to qcr.shtml
includes directory added

TAG: qcreports_db-6-0-6-?
DATE: 08/30/2016
STAFF: sc
CHANGES:TR12922
1) Added ALL_OMIMNoMP.rpt

TAG: qcreports_db-?
DATE: 08/24/2016
STAFF: kstone
CHANGES: changed ftp url
qcr.html changed to qcr.shtml

TAG: qcreports_db-6-0-5-2
DATE: 08/22/2016
STAFF: sc
CHANGES: