@@ -1,3 +1,13 @@
+TAG: qcreports_db-6-0-6-10
+DATE: 11/17/2016
+STAFF: sc
+CHANGES: GXD HT Project TR12370
+modified:   mgd/GXD_SpecTheiler.sql
+modified:   mgd/GXD_SpecTheilerAge.py
+modified:   mgd/RECOMB_SpecTheiler.sql
+modified:   mgd/RECOMB_SpecTheilerAge.py
+modified:   qcr.shtml
+
 TAG: qcreports_db-6-0-6-9
 DATE: 11/14/2016
 STAFF: sc
